--- a/hcitool.xcodeproj/xcshareddata/xcschemes/xcschememanagement.plist
+++ b/hcitool.xcodeproj/xcshareddata/xcschemes/xcschememanagement.plist
@@ -3,7 +3,7 @@
 <dict>
   <key>SchemeUserState</key>
   <dict>
-    <key>hcitool-Package.xcscheme</key>
+    <key>hcitool.xcscheme</key>
     <dict></dict>
   </dict>
   <key>SuppressBuildableAutocreation</key>
