--- a/.gitignore
+++ b/.gitignore
@@ -49,10 +49,8 @@ playground.xcworkspace
 
 # Carthage
 #
-# Add this line if you want to avoid checking in source code from Carthage dependencies.
-# Carthage/Checkouts
 
-Carthage/Build
+Carthage/*
 
 # fastlane
 #
