Issue #6, Tested `SetRandomAddressCommand`

--- a/Xcode/hcitool.xcodeproj/xcshareddata/xcschemes/hcitool.xcscheme
+++ b/Xcode/hcitool.xcodeproj/xcshareddata/xcschemes/hcitool.xcscheme
@@ -38,6 +38,11 @@
                BlueprintName = "HCIToolTests"
                ReferencedContainer = "container:hcitool.xcodeproj">
             </BuildableReference>
+            <SkippedTests>
+               <Test
+                  Identifier = "HCIToolTests/testSetRnadomAddress()">
+               </Test>
+            </SkippedTests>
          </TestableReference>
       </Testables>
       <MacroExpansion>
