Updated GitHub CI

--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -4,48 +4,22 @@ on: [push]
 
 jobs:
 
-    linux-swift-51:
-        name: Linux x86_64 (Swift 5.1)
-        runs-on: ubuntu-18.04
-        container: swift:5.1
-        steps:
-        - name: Checkout
-          uses: actions/checkout@v1
-        - name: Swift Version
-          run: swift --version
-        - name: Build (Debug)
-          run: swift build -c debug
-        - name: Build (Release)
-          run: swift build -c release
-
-    linux-swift-53:
-        name: Linux x86_64 (Swift 5.3)
+    linux-swift:
+        name: Linux
         runs-on: ubuntu-20.04
-        container: swift:5.3-focal
+        container: swift:5.6.1-focal
         steps:
         - name: Checkout
-          uses: actions/checkout@v1
+          uses: actions/checkout@v2
         - name: Swift Version
           run: swift --version
         - name: Build (Debug)
           run: swift build -c debug
         - name: Build (Release)
           run: swift build -c release
-
-    macOS-swift-53:
-        name: macOS (Swift 5.3)
-        runs-on: macOS-latest
-        steps:
-        - name: Checkout
-          uses: actions/checkout@v1
-        - name: Xcode Version
-          run: |
-            sudo xcode-select -s /Applications/Xcode_12.app
-            xcodebuild -version
-            swift --version
-        - name: Swift Version
-          run: swift --version
-        - name: Build (Debug)
-          run: swift build -c debug
-        - name: Build (Release)
-          run: swift build -c release
+        - name: Test (Debug)
+          run: swift test --configuration debug --enable-code-coverage
+        - name: Test (Release)
+          run: swift test --configuration release -Xswiftc -enable-testing --enable-code-coverage
+        - name: Coverage Report
+          uses: maxep/spm-lcov-action@0.3.1
